fixed some shit

--- a/grindonweb-main/public/index.html
+++ b/grindonweb-main/public/index.html
@@ -11,10 +11,10 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/Logo/Gwhite.png" type="image/x-icon">
 
   <title>
-    Giftos
+    GrindOn
   </title>
 
   <!-- slider stylesheet -->
@@ -35,9 +35,7 @@
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
-          <span>
-            Giftos
-          </span>
+          <img src="/images/Logo/grindlogo.png" style="height: 50px; width: auto;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
@@ -112,7 +110,7 @@
                   </div>
                   <div class="col-md-5 ">
                     <div class="img-box">
-                      <img style="width:600px" src="images/image3.jpeg" alt="" />
+                      <img style="width:600px" src="images/Logo/slider2.jpg" alt="" />
                     </div>
                   </div>
                 </div>
